--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
